# rust-trade

./: .env.example  Cargo.toml  README.md  docker-compose.yml
config/: development.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/types/: backtest.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs  types.rs
trading-common/: Cargo.toml  README.md
trading-common/src/backtest/: engine.rs  portfolio.rs
trading-common/src/data/: repository.rs  types.rs
trading-core/: Cargo.toml  README.md
trading-core/benches/: market_data_cache.rs  repository_bench.rs
trading-core/examples/: balance_check.rs  example_check.rs
trading-core/src/: config.rs  lib.rs  main.rs
trading-core/src/backtest/: engine.rs  metrics.rs  mod.rs  portfolio.rs  sma.rs  types.rs
trading-core/src/backtest/strategy/: base.rs  mod.rs  rsi.rs  sma.rs
trading-core/src/blockchain/: error.rs  mod.rs  types.rs
trading-core/src/data/: cache.rs  mod.rs  repository.rs  types.rs
trading-core/src/exchange/: binance.rs  errors.rs  mod.rs  traits.rs  types.rs  utils.rs
trading-core/src/live_trading/: mod.rs  paper_trading.rs
trading-core/src/service/: errors.rs  market_data.rs  mod.rs  types.rs
