[package]
name = "trading-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.9", features = [] }
tauri-plugin-shell = "2.0.0-beta.2"
trading-core = { path = "../trading-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1.32", features = ["serde"] }
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
